# RAG

./: .gitignore  Makefile  config.yml  pyproject.toml
src/: __main__.py  cli.py  config.py
src/evaluation/: __init__.py  recall.py
src/generation/: __init__.py  llm.py  prompt.py
src/ingestion/: __init__.py  chunker.py  indexer.py  loader.py
src/models/: __init__.py  config.py  rag.py
src/retrieval/: __init__.py  base.py  bm25.py  tfidf.py
