[project]
name = "rag"
version = "0.1.0"
description = "Will you answer my questions?"
requires-python = ">=3.12"
dependencies = [
	"pyyaml",
	"pydantic",
	"fire",
	"bm25s",
	"tqdm",
	"scikit-learn",
]

[dependency-groups]
dev = [
    "flake8",
    "mypy",
]

[tool.mypy]
explicit_package_bases = true
